--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-remark-images": "^2.0.1",
+    "gatsby-remark-copy-linked-files": "2.0.6",
+    "gatsby-remark-images": "3.0.0",
     "gatsby-remark-relative-images": "^0.2.0",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.1",
