Let's try this (#13)
* Let's try this

* Fix bad indentation

* Changed name of the field

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,6 +33,7 @@ collections:
       - {label: "Twitter", name: "twitter", widget: "string"}
       - {label: "Github", name: "github", widget: "string"}
       - {label: "Bio", name: "bio", widget: "markdown"}
+      - {label: "Portrait", name: "img", widget: "image"}
 
   - name: "pages"
     label: "Pages"
