Adding ability to edit author (#28)
* Adding ability to edit author

* Widget not Width

* Forgot collection type

* How about now?

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,6 +16,7 @@ collections:
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Authors", name: "author", widget: "relation", collection: "people", displayFields: ['name', 'github'], searchFields: ['name', 'github', 'twitter'], valueField: 'name'}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
