--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "platform-frontside",
+  "description": "Frontend Platform for Frontside Website",
+  "version": "2.0.0",
+  "author": "Taras <taras@frontside.io>",
+  "private": true,
   "dependencies": {
     "bulma": "^0.7.0",
     "gatsby": "^2.0.0",
@@ -31,20 +32,25 @@
     "uuid": "^3.2.1"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "netlifycms"
   ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "start": "npm run develop",
+    "lerna": "lerna",
+    "bootstrap": "lerna bootstrap",
+    "postinstall": "yarn bootstrap",
+    "start": "yarn develop",
     "clean": "rimraf .cache public",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
+    "build": "yarn clean && gatsby build",
+    "develop": "yarn clean && gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "lerna": "^3.5.1",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2"
   }
