Show people page (#31)
* Added alumns flag

* Simplify gatsby-connect-authors

* Rendering people

* Showing portraits

* Showing images

* Adding episodes and podcast to each person

* Added episode pages

* Showing podcast episodes

--- a/plugins/gatsby-source-simplecast/package.json
+++ b/plugins/gatsby-source-simplecast/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "simplecast-api-client": "1.0.2",
-    "lodash.camelcase": "4.3.0"
+    "lodash.camelcase": "4.3.0",
+    "lodash.kebabcase": "4.1.1"
   }
 }
