--- a/package.json
+++ b/package.json
@@ -7,28 +7,31 @@
   "dependencies": {
     "bulma": "^0.7.0",
     "gatsby": "^2.0.0",
-    "gatsby-image": "^2.0.10",
+    "gatsby-image": "2.0.22",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-netlify-cms": "^3.0.0",
     "gatsby-plugin-purgecss": "^2.4.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-remark-copy-linked-files": "2.0.6",
-    "gatsby-remark-images": "3.0.0",
-    "gatsby-remark-relative-images": "^0.2.0",
+    "gatsby-remark-copy-linked-files": "^2.0.7",
+    "gatsby-remark-images": "^3.0.0",
+    "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.1",
     "gatsby-transformer-sharp": "^2.1.1",
+    "lerna": "^3.5.1",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^2.1.1",
     "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.4",
+    "prettier": "^1.7.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "rimraf": "^2.6.2",
     "uuid": "^3.2.1"
   },
   "keywords": [
@@ -48,10 +51,5 @@
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "lerna": "^3.5.1",
-    "prettier": "^1.7.4",
-    "rimraf": "^2.6.2"
   }
 }
