--- a/plugins/gatsby-source-simplecast/package.json
+++ b/plugins/gatsby-source-simplecast/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "simplecast-api-client": "1.0.2",
     "lodash.camelcase": "4.3.0",
-    "lodash.kebabcase": "4.1.1"
+    "lodash.kebabcase": "4.1.1",
+    "remark": "10.0.1",
+    "mdast-util-to-hast": "4.0.0",
+    "hast-util-to-html": "5.0.0"
   }
 }
