--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "bulma": "^0.7.0",
     "gatsby": "^2.0.0",
-    "gatsby-image": "2.0.22",
+    "gatsby-image": "^2.0.22",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-netlify-cms": "^3.0.0",
     "gatsby-plugin-purgecss": "^2.4.0",
