Design and componentize homepage
Sass (and Bulma) was dropped in favor of PostCSS

Filenames with capitalizations were renamed to be cross-platform
compatible

Added client logos

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "author": "Taras <taras@frontside.io>",
   "private": true,
   "dependencies": {
-    "bulma": "^0.7.0",
+    "autoprefixer": "^9.4.4",
+    "classnames": "^2.2.6",
     "gatsby": "^2.0.0",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-netlify-cms": "^3.0.0",
+    "gatsby-plugin-postcss": "^2.0.2",
     "gatsby-plugin-purgecss": "^2.4.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.0.0",
@@ -24,13 +25,16 @@
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^2.1.1",
-    "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.4",
+    "postcss-calc": "^7.0.1",
+    "postcss-color-function": "^4.0.1",
+    "precss": "^4.0.0",
     "prettier": "^1.7.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "react-transition-group": "^2.5.2",
     "rimraf": "^2.6.2",
     "uuid": "^3.2.1"
   },
