--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "parcel-bundler": "^1.9.4",
     "postcss-calc": "^7.0.1",
     "postcss-color-function": "^4.0.1",
+    "postcss-nested": "4.1.1",
     "precss": "^4.0.0",
     "prettier": "^1.7.4",
     "prop-types": "^15.6.0",
