--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "gatsby": "^2.0.0",
     "gatsby-image": "^2.0.22",
+    "gatsby-plugin-hotjar": "^1.0.1",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-netlify-cms": "^3.0.0",
     "gatsby-plugin-postcss": "^2.0.2",
