--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "yarn build && yarn verify-sitemap ${URL} ${DEPLOY_URL}"
+  command = "yarn build # && yarn verify-sitemap ${URL} ${DEPLOY_URL}"
 [build.environment]
   YARN_VERSION = "1.9.4"
   YARN_FLAGS = "--no-ignore-optional"
