--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "autoprefixer": "^9.4.4",
     "classnames": "^2.2.6",
+    "dateformat": "3.0.3",
     "gatsby": "^2.0.0",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-google-analytics": "2.0.14",
