Update about page (#48)
* Update Introduction and Values

* Team styles

* Setup FontAwesome

* Call to Action box

* Adjust vertical rhythm for content sections

* Open source section

* Setup intro as part of the people models.

* Missing responsive styles

* Fix intro not showing up

* Copy and style changes after feedback.

* Fix order of team members.

* Make CTA box use a variable color for dark mode situation

* Dark mode styles

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "Taras <taras@frontside.io>",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "autoprefixer": "^9.4.4",
     "classnames": "^2.2.6",
     "dateformat": "3.0.3",
