--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "2.0.0",
   "author": "Taras <taras@frontside.io>",
   "private": true,
+  "engines": {
+    "node" : "~10.16.2"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
