--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "version": "2.0.0",
   "author": "Taras <taras@frontside.io>",
   "private": true,
-  "engines": {
-    "node": "~10.16.2"
-  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
@@ -35,7 +32,7 @@
     "gatsby-transformer-sharp": "^2.3.14",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^2.10.23",
+    "netlify-cms-app": "^2.11.20",
     "parcel-bundler": "^1.12.4",
     "postcss-calc": "^7.0.2",
     "postcss-color-function": "^4.1.0",
