--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-plugin-sitemap": "2.2.27",
     "gatsby-remark-copy-linked-files": "^2.1.37",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.44",
     "gatsby-remark-prismjs": "^3.3.31",
     "gatsby-remark-relative-images": "^0.2.3",
