--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,19 @@
 [build]
   publish = "public"
   command = "yarn build # && yarn verify-sitemap ${URL} ${DEPLOY_URL}"
+  
 [build.environment]
   YARN_VERSION = "1.9.4"
   YARN_FLAGS = "--no-ignore-optional"
+
+[[redirects]]
+  from = "https://frontside.io/*"
+  to = "https://frontside.com/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "https://www.frontside.io/*"
+  to = "https://frontside.com/:splat"
+  status = 301
+  force = true
