--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dateformat": "3.0.3",
     "gatsby": "^2.4.0",
     "gatsby-image": "^2.2.41",
+    "gatsby-plugin-canonical-urls": "^2.3.3",
     "gatsby-plugin-google-analytics": "2.1.35",
     "gatsby-plugin-hotjar": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.41",
