--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "scripts": {
     "start": "yarn develop",
     "clean": "rimraf .cache public",
-    "build": "yarn clean && gatsby build",
+    "build": "yarn clean && gatsby build && cp -R ./static/*.html ./public/",
     "develop": "yarn clean && gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --write \"{gatsby-*.js,src/**/*.js}\"",
