--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-google-analytics": "2.1.35",
     "gatsby-plugin-hotjar": "^1.0.1",
+    "gatsby-plugin-load-script": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-netlify": "^2.1.32",
     "gatsby-plugin-netlify-cms": "^4.1.40",
