--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,13 @@
   YARN_FLAGS = "--no-ignore-optional"
 
 [[redirects]]
-  from = "/bigtest*"
+  from = "/bigtest"
+  to = "https://bigtest.netlify.app/"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/bigtest/*"
   to = "https://bigtest.netlify.app/:splat"
   status = 200
   force = true
