--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prismjs": "^1.19.0",
     "prop-types": "^15.6.0",
     "react": "^16.12.0",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-transition-group": "^4.3.0",
