feat: add discord bot commands
This implementation uses the webhooks and the Frontside Jack account shared with the team. The IDs included are public, and anything private is saved in Netlify.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
   publish = "public"
   command = "yarn build # && yarn verify-sitemap ${URL} ${DEPLOY_URL}"
-  
+  functions = "commands/functions"
+
 [build.environment]
   YARN_VERSION = "1.9.4"
   YARN_FLAGS = "--no-ignore-optional"
