--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "^9.7.4",
     "classnames": "^2.2.6",
     "dateformat": "3.0.3",
+    "discord-interactions": "^1.5.2",
     "gatsby": "^2.4.0",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-google-analytics": "2.1.35",
@@ -32,6 +33,7 @@
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.11.20",
+    "node-fetch": "^2.6.1",
     "parcel-bundler": "^1.12.4",
     "postcss-calc": "^7.0.2",
     "postcss-color-function": "^4.1.0",
