--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-remark": "^2.6.52",
     "gatsby-transformer-sharp": "^2.3.14",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.11.20",
     "parcel-bundler": "^1.12.4",
@@ -43,7 +43,6 @@
     "react-helmet": "^5.2.1",
     "react-transition-group": "^4.3.0",
     "rimraf": "^3.0.2",
-    "simplecast-api-client": "^2.0.0",
     "syntax-highlighting": "^1.0.0",
     "uuid": "^3.4.0"
   },
@@ -71,5 +70,8 @@
   "volta": {
     "node": "14.17.0",
     "yarn": "1.22.10"
+  },
+  "devDependencies": {
+    "netlify-cli": "^3.30.7"
   }
 }
