--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-remark": "^2.6.52",
     "gatsby-transformer-sharp": "^2.3.14",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.11.20",
     "parcel-bundler": "^1.12.4",
@@ -57,13 +57,21 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "start": "yarn develop",
-    "clean": "rimraf .cache public",
-    "build": "yarn clean && gatsby build && cp -R ./static/*.html ./public/",
-    "develop": "yarn clean && gatsby develop",
+    "start": "gatsby develop",
+    "clean": "gatsby clean",
+    "develop:clean": "yarn clean && yarn develop",
+    "build": "gatsby build && cp -R ./static/*.html ./public/",
+    "build:clean": "yarn clean && gatsby build && cp -R ./static/*.html ./public/",
     "serve": "gatsby serve",
     "format": "prettier --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "verify-sitemap": "./lib/verify-sitemap/index.js"
+  },
+  "volta": {
+    "node": "14.17.0",
+    "yarn": "1.22.10"
+  },
+  "devDependencies": {
+    "netlify-cli": "^3.30.7"
   }
 }
