--- a/package.json
+++ b/package.json
@@ -5,54 +5,46 @@
   "author": "Taras <taras@frontside.com>",
   "private": true,
   "dependencies": {
-    "autoprefixer": "^9.7.4",
     "classnames": "^2.2.6",
-    "dateformat": "3.0.3",
-    "gatsby": "^2.4.0",
-    "gatsby-image": "^2.2.41",
+    "dateformat": "4.5.1",
+    "gatsby": "^3.10.1",
+    "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-netlify": "^2.1.32",
-    "gatsby-plugin-netlify-cms": "^4.1.40",
-    "gatsby-plugin-postcss": "^2.1.20",
-    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-netlify": "^3.10.0",
+    "gatsby-plugin-postcss": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-plugin-sitemap": "2.2.27",
-    "gatsby-remark-copy-linked-files": "^2.1.37",
+    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-plugin-sitemap": "4.6.0",
+    "gatsby-remark-copy-linked-files": "^4.7.0",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.1.44",
-    "gatsby-remark-prismjs": "^3.3.31",
+    "gatsby-remark-images": "^5.7.0",
+    "gatsby-remark-prismjs": "^5.7.0",
     "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.52",
-    "gatsby-transformer-sharp": "^2.3.14",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-remark": "^4.7.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms-app": "^2.11.20",
-    "parcel-bundler": "^1.12.4",
+    "parcel-bundler": "^1.12.5",
     "postcss-calc": "^7.0.2",
     "postcss-color-function": "^4.1.0",
     "precss": "^4.0.0",
-    "prettier": "^1.19.1",
-    "prismjs": "^1.19.0",
+    "prettier": "^2.3.2",
+    "prismjs": "^1.24.1",
     "prop-types": "^15.6.0",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-transition-group": "^4.3.0",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
     "syntax-highlighting": "^1.0.0",
-    "uuid": "^3.4.0"
+    "uuid": "^8.3.2"
   },
   "keywords": [
-    "gatsby",
-    "netlifycms"
-  ],
-  "workspaces": [
-    "plugins/*",
-    "lib/*"
+    "gatsby"
   ],
   "license": "MIT",
   "main": "n/a",
@@ -72,12 +64,12 @@
     "verify-sitemap": "./lib/verify-sitemap/index.js"
   },
   "volta": {
-    "node": "14.17.0",
+    "node": "14.17.3",
     "yarn": "1.22.10"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
     "bigtest": "^0.14.0",
-    "netlify-cli": "^3.30.7"
+    "netlify-cli": "^5.2.0"
   }
 }
