--- a/plugins/gatsby-connect-authors/package.json
+++ b/plugins/gatsby-connect-authors/package.json
@@ -1,15 +1,5 @@
 {
   "name": "gatsby-connect-authors",
   "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "funcadelic": "0.5.4",
-    "slugify": "1.3.3"
-  }
+  "license": "MIT"
 }
