--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,14 @@ jobs:
           SIMPLECAST_API: ${{ secrets.SIMPLECAST_API }}
       - name: check urls are stable
         run: yarn check-urls ${{ steps.url-hash.outputs.url-hash }}
+
+  bigtest:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v2
+      - uses: volta-cli/action@v1
+      - run: yarn
+      - run: yarn test
+        env:
+          SIMPLECAST_API: ${{ secrets.SIMPLECAST_API }}
