--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,12 @@ to = "https://bigtest.netlify.app/bigtest/:splat"
 
 [[redirects]]
 force = true
+from = "/effection/api/*"
+status = 200
+to = "https://v2--effection-api.netlify.app/:splat"
+
+[[redirects]]
+force = true
 from = "/effection/*"
 status = 200
 to = "https://effection.netlify.app/effection/:splat"
