--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "author": "Taras <taras@frontside.com>",
   "private": true,
   "dependencies": {
-    "classnames": "^2.2.6",
+    "@vanilla-extract/babel-plugin": "^1.0.1",
+    "@vanilla-extract/css": "^1.2.2",
+    "@vanilla-extract/sprinkles": "^1.0.0",
+    "@vanilla-extract/webpack-plugin": "^1.1.0",
     "dateformat": "4.5.1",
+    "dessert-box": "^0.1.0",
     "gatsby": "^3.10.1",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-netlify": "^3.10.0",
-    "gatsby-plugin-postcss": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-sharp": "^3.10.2",
@@ -27,10 +30,6 @@
     "gatsby-transformer-sharp": "^3.10.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
-    "parcel-bundler": "^1.12.5",
-    "postcss-calc": "^7.0.2",
-    "postcss-color-function": "^4.1.0",
-    "precss": "^4.0.0",
     "prettier": "^2.3.2",
     "prismjs": "^1.24.1",
     "prop-types": "^15.6.0",
