feat: implement storybook

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "yarn build" # && yarn verify-sitemap ${URL} ${DEPLOY_URL}
+command = "yarn build && yarn build-storybook" # && yarn verify-sitemap ${URL} ${DEPLOY_URL}
 publish = "public" 
 
 [build.environment]
@@ -36,6 +36,10 @@ to = "https://frontside.com/:splat"
 
 [[headers]]
 for = "/bigtest/asciinema/iframes/cross-platform.html"
+[headers.values]
+X-Frame-Options = "SAMEORIGIN"
 
+[[headers]]
+for = "/storybook*"
 [headers.values]
 X-Frame-Options = "SAMEORIGIN"
