--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "Taras <taras@frontside.com>",
   "private": true,
   "dependencies": {
+    "@types/react-helmet": "^6.1.2",
     "@vanilla-extract/babel-plugin": "^1.0.1",
     "@vanilla-extract/css": "^1.2.2",
+    "@vanilla-extract/css-utils": "^0.1.1",
     "@vanilla-extract/sprinkles": "^1.0.0",
     "@vanilla-extract/webpack-plugin": "^1.1.0",
     "dateformat": "4.5.1",
