--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Taras <taras@frontside.com>",
   "private": true,
   "dependencies": {
+    "@typeform/embed-react": "^1.1.1",
     "@types/react-helmet": "^6.1.2",
     "@vanilla-extract/babel-plugin": "^1.0.1",
     "@vanilla-extract/css": "^1.4.0",
