--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-transformer-sharp": "^3.10.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
+    "plausible-tracker": "^0.3.1",
     "prettier": "^2.3.2",
     "prismjs": "^1.24.1",
     "prop-types": "^15.6.0",
