--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Taras <taras@frontside.com>",
   "private": true,
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.4.1",
     "@typeform/embed-react": "^1.1.1",
     "@types/react-helmet": "^6.1.2",
     "@vanilla-extract/babel-plugin": "^1.0.1",
@@ -39,6 +40,7 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-inview": "^4.3.11",
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
     "syntax-highlighting": "^1.0.0",
