--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-inview": "^4.3.11",
+    "react-reduce-motion": "^2.0.2",
     "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
     "syntax-highlighting": "^1.0.0",
