--- a/netlify.toml
+++ b/netlify.toml
@@ -24,6 +24,12 @@ to = "https://bigtest.netlify.app/bigtest/:splat"
 
 [[redirects]]
 force = true
+from = "/effection/api"
+status = 200
+to = "https://frontside.com/effection/api/index.html"
+
+[[redirects]]
+force = true
 from = "/effection/api/*"
 status = 200
 to = "https://v2--effection-api.netlify.app/:splat"
@@ -36,9 +42,21 @@ to = "https://effection.netlify.app/effection/:splat"
 
 [[redirects]]
 force = true
+from = "/interactors/html/api"
+status = 200
+to = "https://frontside.com/interactors/html/api/index.html"
+
+[[redirects]]
+force = true
 from = "/interactors/html/api/*"
 status = 200
 to = "https://main--interactors-html-api.netlify.app/:splat"
+
+[[redirects]]
+force = true
+from = "/interactors/mui/api"
+status = 200
+to = "https://frontside.com/interactors/mui/api/index.html"
 
 [[redirects]]
 force = true
