OSS projects on main nav

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vanilla-extract/css-utils": "^0.1.1",
     "@vanilla-extract/webpack-plugin": "^2.0.0",
     "dateformat": "4.5.1",
+    "downshift": "^6.1.7",
     "gatsby": "^3.10.1",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
