--- a/netlify.toml
+++ b/netlify.toml
@@ -24,8 +24,8 @@ to = "https://bigtest.netlify.app/bigtest/:splat"
 
 [[redirects]]
 force = true
-from = "/effection/what/"
-status = 200
+from = "/effection/api"
+status = 301
 to = "/effection/api/index.html"
 
 [[redirects]]
@@ -42,8 +42,8 @@ to = "https://effection.netlify.app/effection/:splat"
 
 [[redirects]]
 force = true
-from = "/interactors/huh"
-status = 200
+from = "/interactors/html/api"
+status = 301
 to = "/interactors/html/api/index.html"
 
 [[redirects]]
@@ -54,8 +54,8 @@ to = "https://main--interactors-html-api.netlify.app/:splat"
 
 [[redirects]]
 force = true
-from = "/interactors/mui/api/"
-status = 200
+from = "/interactors/mui/api"
+status = 301
 to = "/interactors/mui/api/index.html"
 
 [[redirects]]
