--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "private": true,
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.4.1",
+    "@netlify/functions": "^0.10.0",
     "@typeform/embed-react": "^1.1.1",
     "@types/react-helmet": "^6.1.2",
     "@vanilla-extract/babel-plugin": "^1.0.1",
     "@vanilla-extract/css": "^1.4.0",
     "@vanilla-extract/css-utils": "^0.1.1",
     "@vanilla-extract/webpack-plugin": "^2.0.0",
+    "axios": "^0.24.0",
     "dateformat": "4.5.1",
     "downshift": "^6.1.7",
     "gatsby": "^3.10.1",
