note the point of the diff

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,8 @@ jobs:
         run: yarn build
         env:
           SIMPLECAST_API: ${{ secrets.SIMPLECAST_API }}
-      - run: git diff
+      - name: diff shows uncommitted url changes
+        run: git diff sitemap.txt
       - name: check urls are stable
         run: yarn check-urls ${{ steps.url-hash.outputs.url-hash }}
 
