--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "4.6.0",
     "gatsby-remark-copy-linked-files": "^4.7.0",
-    "gatsby-remark-external-links": "^0.0.4",
+    "@jd-carroll/gatsby-remark-external-links": "^0.1.0",
     "gatsby-remark-images": "^5.7.0",
     "gatsby-remark-prismjs": "^5.7.0",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-remark": "^4.7.0",
     "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby-remark-autolink-headers": "^4.11.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
     "plausible-tracker": "^0.3.1",
