--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: frontside.com
+  name: frontside-com
   annotations:
     github.com/project-slug: thefrontside/frontside.com
 spec:
