Test out Fresh asset generation

--- a/netlify.toml
+++ b/netlify.toml
@@ -52,7 +52,7 @@ force = true
 from = "/platformscript/*"
 status = 200
 to = "https://platformscript.deno.dev/:splat"
-headers = {X-Base = "https://frontside.com/platformscript/" }
+headers = {X-Base = "https://frontside.com/platformscript/", X-Fresh-Base-Url = "https://frontside.com/platformscript/" }
 
 [[redirects]]
 force = true
