--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-transformer-sharp": "^3.10.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
+    "lodash.round": "^4.0.4",
     "plausible-tracker": "^0.3.1",
     "prettier": "^2.3.2",
     "prismjs": "^1.26.0",
